test/libyul/yulSyntaxTests/zkevm/invalid/ptr_into_active_ptr.yul
{
	$zk_ptr_add_into_active()
	$zk_ptr_shrink_into_active()
	$zk_ptr_pack_into_active()
}
// ====
// dialect: evm
// ----
// TypeError 7000: (3-26): Function "$zk_ptr_add_into_active" expects 1 arguments but got 0.
// TypeError 7000: (30-56): Function "$zk_ptr_shrink_into_active" expects 1 arguments but got 0.
// TypeError 7000: (60-84): Function "$zk_ptr_pack_into_active" expects 1 arguments but got 0.
